--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <button type="button" class="btn btn-secondary">More Details</button>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item carousel_item">
                         <img src="images/slider/slider-3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption slider_text_bg p-5 rounded mb-5">
                             <h5 class="slider_text">Awesome Audotarium</h5>
